welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:1: error: Invalid literal number
def golomb(num:Int): Int = {var T = new Array[Int](num+1);var j= 2T(1) = 1; for (i<- 1 to num) {var compteur = 0;while (compteur < T(i)) {T(j) = i; j= j+1;compteur = compteur+1} } ; return T(num)
                                                                 ^golomb:1: error: illegal start of simple expression
def golomb(num:Int): Int = {var T = new Array[Int](num+1);var j= 2T(1) = 1; for (i<- 1 to num) {var compteur = 0;while (compteur < T(i)) {T(j) = i; j= j+1;compteur = compteur+1} } ; return T(num)
                                                                 ^